--- a/book/caltech.html
+++ b/book/caltech.html
@@ -183,16 +183,45 @@ En 118. Classical Mythology.	978-0801494321 <br>
 <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ac&ref=tf_til&ad_type=product_link&tracking_id=numchk-20&marketplace=amazon&region=US&placement=080149432X&asins=080149432X&linkId=6ae021f341f439e551467f8b4595e7a7&show_border=false&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
 </iframe> <br><br>
 
-En 118. Classical Mythology.	978-0140449273 <br> <br><br>
-En 121. Literature and Its Readers.	978-0140447941 <br> <br><br>
-En 121. Literature and Its Readers.	978-0140445039 <br> <br><br>
-En 121. Literature and Its Readers.	978-1170043462 <br> <br><br>
-En 121. Literature and Its Readers.	978-0393327342 <br> <br><br>
-En 135. Dicken's London.	9780140432411 <br> <br><br>
-En 135. Dicken's London.	9780141439723 <br> <br><br>
-En 135. Dicken's London.	0140435808 <br> <br><br>
-En 135. Dicken's London.	1250068266 <br> <br><br>
-En 180. Special Topics in English: Fabricating LA.	0520260155 <br> <br><br>
+En 118. Classical Mythology.	978-0140449273 <br>
+<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ac&ref=tf_til&ad_type=product_link&tracking_id=numchk-20&marketplace=amazon&region=US&placement=080149432X&asins=080149432X&linkId=6ae021f341f439e551467f8b4595e7a7&show_border=false&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
+</iframe> <br><br>
+
+En 121. Literature and Its Readers.	978-0140447941 <br>
+<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ac&ref=tf_til&ad_type=product_link&tracking_id=numchk-20&marketplace=amazon&region=US&placement=0140447946&asins=0140447946&linkId=4df45fb0568edc232b6739324cfe4f72&show_border=false&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
+</iframe> <br><br>
+
+En 121. Literature and Its Readers.	978-0140445039 <br>
+<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ac&ref=tf_til&ad_type=product_link&tracking_id=numchk-20&marketplace=amazon&region=US&placement=014044503X&asins=014044503X&linkId=b4403b00d2c3c19f6bb682dcc0f39ccb&show_border=false&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
+</iframe> <br><br>
+
+En 121. Literature and Its Readers.	978-1170043462 <br>
+<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ac&ref=tf_til&ad_type=product_link&tracking_id=numchk-20&marketplace=amazon&region=US&placement=1170043461&asins=1170043461&linkId=e088adfc02daee5795c1d0c5d12623ea&show_border=false&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
+</iframe> <br><br>
+
+En 121. Literature and Its Readers.	978-0393327342 <br>
+<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ac&ref=tf_til&ad_type=product_link&tracking_id=numchk-20&marketplace=amazon&region=US&placement=0393327345&asins=0393327345&linkId=4f769759ed8a4b58388727690e8c82e4&show_border=false&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
+</iframe> <br><br>
+
+En 135. Dicken's London.	9780140432411 <br>
+<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ac&ref=tf_til&ad_type=product_link&tracking_id=numchk-20&marketplace=amazon&region=US&placement=0140432418&asins=0140432418&linkId=0f64dbe01685e6c15546b8ecaaad796f&show_border=false&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
+</iframe> <br><br>
+
+En 135. Dicken's London.	9780141439723 <br>
+<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ac&ref=tf_til&ad_type=product_link&tracking_id=numchk-20&marketplace=amazon&region=US&placement=0141439726&asins=0141439726&linkId=ea8c5e40049c9de2c10bdca6b652b3d5&show_border=false&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
+</iframe> <br><br>
+
+En 135. Dicken's London.	0140435808 <br>
+<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ac&ref=tf_til&ad_type=product_link&tracking_id=numchk-20&marketplace=amazon&region=US&placement=0140435808&asins=0140435808&linkId=153f9a99733953959da8c9ae76ba538b&show_border=false&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
+</iframe> <br><br>
+
+En 135. Dicken's London.	1250068266 <br><iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ac&ref=tf_til&ad_type=product_link&tracking_id=numchk-20&marketplace=amazon&region=US&placement=1250068266&asins=1250068266&linkId=ed95f5937792c393b3adb5cc2259c4db&show_border=false&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
+</iframe> <br><br>
+
+En 180. Special Topics in English: Fabricating LA.	0520260155 <br>
+<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ac&ref=tf_til&ad_type=product_link&tracking_id=numchk-20&marketplace=amazon&region=US&placement=0520260155&asins=0520260155&linkId=b74e4419a5adea982dad660fa7ccc100&show_border=false&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
+</iframe> <br><br>
+
 En 180. Special Topics in English: Fabricating LA.	0811218228 <br> <br><br>
 En 180. Special Topics in English: Fabricating LA.	0374529949 <br> <br><br>
 En 180. Special Topics in English: Fabricating LA.	0375703764 <br> <br><br>
