--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
               </div>
             </div>
 <br><br>
-            <p><b>TextBook Lists</b> - The textbooks for major universities<br>
-                                <div class="six columns" >
+            <p><b>TextBook Lists</b> - The textbooks for major universities, a look at ISBN and UPC codes<br>
+              <div class="six columns" >
                     &nbsp; &nbsp; &nbsp; &nbsp;📓 <a href="book/caltech.html">Caltech</a><br> 
-                  </div>
-                  <div class="six columns">
+              </div>
+              <div class="six columns">
                     &nbsp; &nbsp; &nbsp; &nbsp; <a href=""></a><br>
-                              </div>
+              </div>
 
 
             <br><br><b>About</b><Br>
