--- a/index.html
+++ b/index.html
@@ -112,9 +112,8 @@
         </p>
         <p>List Pages:<br> 
         <a href="/sitemap.txt">sitemap</a><br>
-        <a href="/sitemaporig.html"></a><br>
-        <a href="/sitemap-nossn1.txt"></a><br>
-        <a href="/sitemap-nossn2.txt"></a><br>
+        <a href="/sitemap-ssn1.txt">ssn1</a><br>
+        <a href="/sitemap-ssn2.txt">ssn2</a><br>
 
         </p>
         <p>contact: <a href="mailto:info@numchk.com">info@numchk.com</a></p>
