--- a/abok/abok.html
+++ b/abok/abok.html
@@ -129,7 +129,7 @@
   <A href="../' + randompage3 + "-" + randompage2 + '-xxxx.html"><h1>SSN</h1>random SSN</a>\
   </div>\
   <div class="row" align=center>\
-  <h2>Caltech textbook list</h2><hr>\
+  <h2>ABOK - Ashley Book of Knots</h2><hr>\
   </div></div>'; 
      
       //top replace
