--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   gtag('js', new Date());
   gtag('config', 'UA-132187606-1');
 </script>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script>
   (adsbygoogle = window.adsbygoogle || []).push({
-    google_ad_client: "ca-pub-5845274709975922",
+    google_ad_client: "ca-pub-3220022823815995",
     enable_page_level_ads: true
   });
 </script>
