--- a/index.html
+++ b/index.html
@@ -94,7 +94,10 @@
                 &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/SSN-Card.html">SSN Card through history</a><br>
                 &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/SSN-3types.html">SSN 3 types of valid cards</a><br>
                 &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/SSN-island-duplication.html">SSN island duplication</a><br>
+                &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/0256X.30B87.html">Beldar 0256X.30B87</a><br>
                 &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/141-18-6941.html">Jessy Pinkman 141-18-6941</a><br>
+
+
 
               </div>
             </div>
