--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
                 &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/SSN-issued-by-state.html">SSN Blocks by State compared to population</a><br>
                 &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/905-80-5406.html">James Edwards 905-80-5406</a><br>
                 &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/174-63-1503.html">Alex 174-63-1503</a><br>
+                &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/555-78-2643.html">Klinger 555-78-2643</a><br>
+                
               </div>
               <div class="six columns">
                 &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/SSNYears.html">SSN Significant events by year</a><br>
