--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                 &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/905-80-5406.html">James Edwards 905-80-5406</a><br>
                 &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/174-63-1503.html">Alex 174-63-1503</a><br>
                 &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/555-78-2643.html">Klinger 555-78-2643</a><br>
+                &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/000-00-0002.html">Montgomery Burns 000-00-0002</a><br>
                 
               </div>
               <div class="six columns">
