--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                 &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/ssnstates.html">SSN Blocks by State</a><br>
                 &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/parsing-death-master-db.html">SSN Parsing Death Master Database with Perl</a><br>
                 &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/SSN-issued-by-state.html">SSN Blocks by State compared to population</a><br>
+                &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/SSN-FirstCard.html">SSN First Card and lowest number</a><br>
                 &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/905-80-5406.html">James Edwards 905-80-5406</a><br>
                 &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/174-63-1503.html">Alex 174-63-1503</a><br>
                 &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/555-78-2643.html">Klinger 555-78-2643</a><br>
