--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
             <input type='text' id='link_id' placeholder="078-05-1120" size=11        onkeydown = "if (event.keyCode == 13) document.getElementById('link').click()"  >
             <input class="button-primary" type='submit' id='link' value='Search' onClick='javascript:goTo()'><br>
             <div class="row">
+              <b>About:</b><br>
               <div class="six columns" >
                 &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/ssnformat.html">SSN number format</a><br> 
                 &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/index.html">SSN Data parameters definition</a><br>
@@ -91,7 +92,8 @@
                 &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/555-78-2643.html">Klinger 555-78-2643</a><br>
                 &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/000-00-0002.html">Montgomery Burns 000-00-0002</a><br>
                 
-              </div>
+              <br></div>
+                <b>Use in Film: </b><br>
               <div class="six columns">
                 &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/SSNYears.html">SSN Significant events by year</a><br>
                 &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/SSNPresidents.html">SSN Presidents thoughts</a><br>
