--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
           <p><b>Social Security Number</b> - Look up SSN analyzed from 10GB of data
             <input type='text' id='link_id' placeholder="078-05-1120" size=11        onkeydown = "if (event.keyCode == 13) document.getElementById('link').click()"  >
             <input class="button-primary" type='submit' id='link' value='Search' onClick='javascript:goTo()'><br>
+            <b>About:</b><br>
             <div class="row">
-              <b>About:</b><br>
               <div class="six columns" >
                 &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/ssnformat.html">SSN number format</a><br> 
                 &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/index.html">SSN Data parameters definition</a><br>
@@ -87,27 +87,35 @@
                 &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/parsing-death-master-db.html">SSN Parsing Death Master Database with Perl</a><br>
                 &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/SSN-issued-by-state.html">SSN Blocks by State compared to population</a><br>
                 &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/SSN-FirstCard.html">SSN First Card and lowest number</a><br>
-                &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/905-80-5406.html">James Edwards 905-80-5406</a><br>
-                &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/174-63-1503.html">Alex 174-63-1503</a><br>
-                &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/555-78-2643.html">Klinger 555-78-2643</a><br>
-                &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/000-00-0002.html">Montgomery Burns 000-00-0002</a><br>
-                
-              <br></div>
-                <b>Use in Film: </b><br>
-              <div class="six columns">
+             </div>
+                <div class="six columns">
                 &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/SSNYears.html">SSN Significant events by year</a><br>
                 &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/SSNPresidents.html">SSN Presidents thoughts</a><br>
                 &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/SSN-High-Group.html">SSN High Group</a><br>
                 &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/SSN-Card.html">SSN Card through history</a><br>
                 &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/SSN-3types.html">SSN 3 types of valid cards</a><br>
                 &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/SSN-island-duplication.html">SSN island duplication</a><br>
+              </div>
+            </div>
+
+            <b>Use in Film: </b><br>
+            <div class="row">
+              <div class="six columns" >
+                &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/905-80-5406.html">James Edwards 905-80-5406</a><br>
+                &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/174-63-1503.html">Alex 174-63-1503</a><br>
+                &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/555-78-2643.html">Klinger 555-78-2643</a><br>
+   
+              </div>
+              <div class="six columns">
+                &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/000-00-0002.html">Montgomery Burns 000-00-0002</a><br>
                 &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/0256X.30B87.html">Beldar 0256X.30B87</a><br>
                 &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/141-18-6941.html">Jessy Pinkman 141-18-6941</a><br>
 
-
-
               </div>
             </div>
+
+
+
 
             <br><br><b>About</b><Br>
               NumChk analyzes different types of widely used numbers for the purpose of identifying patterns and revealing underlying information that may be intentionally or unintentional encoded in the number and how it is used.  Many industry experts in these specific domains know these things, but it is not widely available to the public until now.  The work done at NumChk ensures the public has access to the same base knowledge that large institutions, governments, regulators and industry experts have and is often exploited in information asymmetry and can be used against you without you knowing.  By sharing the data contained in a number, NumChk gives you access to information that others may use to unfairly target you or information about you - and now you know how.
