--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <br>      
     <div class="row">
       <div class="column" style="margin-top: 1%">
-          <p><b>Social Security Number</b> - Look up SSN analyzed from 10GB of data
+          <b>Social Security Number</b> - Look up SSN analyzed from 10GB of data
             <input type='text' id='link_id' placeholder="078-05-1120" size=11        onkeydown = "if (event.keyCode == 13) document.getElementById('link').click()"  >
             <input class="button-primary" type='submit' id='link' value='Search' onClick='javascript:goTo()'><br>
             <b>About:</b>           
