--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
                 &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/905-80-5406.html">James Edwards 905-80-5406</a><br>
                 &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/174-63-1503.html">Alex 174-63-1503</a><br>
                 &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/555-78-2643.html">Klinger 555-78-2643</a><br>
+                &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/100-20-0853.html">Buzz 100-20-0853</a><br>
+                
    
               </div>
               <div class="six columns">
