--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <b>Social Security Number</b> - Look up SSN analyzed from 10GB of data
             <input type='text' id='link_id' placeholder="078-05-1120" size=11        onkeydown = "if (event.keyCode == 13) document.getElementById('link').click()"  >
             <input class="button-primary" type='submit' id='link' value='Search' onClick='javascript:goTo()'><br>
-            <b>About:</b>           
+            <b>☯ About ☯</b>           
             <div class="row">
                <div class="six columns" >
                 &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/ssnformat.html">SSN number format</a><br> 
@@ -98,20 +98,20 @@
               </div>
             </div>
 
-            <b>Use in Film: </b><br>
+            <b>🎬 Use in Film 🎬 </b><br>
             <div class="row">
               <div class="six columns" >
-                &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/905-80-5406.html">James Edwards 905-80-5406</a><br>
-                &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/174-63-1503.html">Alex 174-63-1503</a><br>
-                &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/555-78-2643.html">Klinger 555-78-2643</a><br>
-                &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/100-20-0853.html">Buzz 100-20-0853</a><br>
+                &nbsp; &nbsp; &nbsp; &nbsp;🎬 <a href="ssn/articles/905-80-5406.html">James Edwards 905-80-5406</a><br>
+                &nbsp; &nbsp; &nbsp; &nbsp;🎬 <a href="ssn/articles/174-63-1503.html">Alex 174-63-1503</a><br>
+                &nbsp; &nbsp; &nbsp; &nbsp;🎬 <a href="ssn/articles/555-78-2643.html">Klinger 555-78-2643</a><br>
+                &nbsp; &nbsp; &nbsp; &nbsp;🎬 <a href="ssn/articles/100-20-0853.html">Buzz 100-20-0853</a><br>
                 
    
               </div>
               <div class="six columns">
-                &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/000-00-0002.html">Montgomery Burns 000-00-0002</a><br>
-                &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/0256X.30B87.html">Beldar 0256X.30B87</a><br>
-                &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/141-18-6941.html">Jessy Pinkman 141-18-6941</a><br>
+                &nbsp; &nbsp; &nbsp; &nbsp;🎬 <a href="ssn/articles/000-00-0002.html">Montgomery Burns 000-00-0002</a><br>
+                &nbsp; &nbsp; &nbsp; &nbsp;🎬 <a href="ssn/articles/0256X.30B87.html">Beldar 0256X.30B87</a><br>
+                &nbsp; &nbsp; &nbsp; &nbsp;🎬 <a href="ssn/articles/141-18-6941.html">Jessy Pinkman 141-18-6941</a><br>
 
               </div>
             </div>
