--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <b>Social Security Number</b> - Look up SSN analyzed from 10GB of data
             <input type='text' id='link_id' placeholder="078-05-1120" size=11        onkeydown = "if (event.keyCode == 13) document.getElementById('link').click()"  >
             <input class="button-primary" type='submit' id='link' value='Search' onClick='javascript:goTo()'><br>
-            <b>☯ About ☯</b>           
+            <b>About SSN...........</b>           
             <div class="row">
                <div class="six columns" >
                 &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/ssnformat.html">SSN number format</a><br> 
@@ -98,7 +98,7 @@
               </div>
             </div>
 
-            <b>🎬 Use in Film 🎬 </b><br>
+            <b>Use in Film........... </b><br>
             <div class="row">
               <div class="six columns" >
                 &nbsp; &nbsp; &nbsp; &nbsp;🎬 <a href="ssn/articles/905-80-5406.html">James Edwards 905-80-5406</a><br>
@@ -119,7 +119,7 @@
 
 
 
-            <br><br><b>About NumChk</b><Br>
+            <br><br><b>About NumChk...........</b><Br>
               NumChk analyzes different types of widely used numbers for the purpose of identifying patterns and revealing underlying information that may be intentionally or unintentional encoded in the number and how it is used.  Many industry experts in these specific domains know these things, but it is not widely available to the public until now.  The work done at NumChk ensures the public has access to the same base knowledge that large institutions, governments, regulators and industry experts have and is often exploited in information asymmetry and can be used against you without you knowing.  By sharing the data contained in a number, NumChk gives you access to information that others may use to unfairly target you or information about you - and now you know how.
       
        >
