--- a/index.html
+++ b/index.html
@@ -80,25 +80,25 @@
             <b>About SSN...........</b>           
             <div class="row">
                <div class="six columns" >
-                &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/ssnformat.html">SSN number format</a><br> 
-                &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/index.html">SSN Data parameters definition</a><br>
-                &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/SSN-450M-Issued.html">SSN 450M Issued</a><br>
-                &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/ssnstates.html">SSN Blocks by State</a><br>
-                &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/parsing-death-master-db.html">SSN Parsing Death Master Database with Perl</a><br>
-                &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/SSN-issued-by-state.html">SSN Blocks by State compared to population</a><br>
-                &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/SSN-FirstCard.html">SSN First Card and lowest number</a><br>
+                &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/ssnformat.html">Number format</a><br> 
+                &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/index.html">Data parameters definition</a><br>
+                &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/SSN-450M-Issued.html">450M Issued</a><br>
+                &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/ssnstates.html">Blocks by State</a><br>
+                &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/parsing-death-master-db.html">Parsing Death Master Database with Perl</a><br>
+                &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/SSN-issued-by-state.html">Blocks by State compared to population</a><br>
+                &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/SSN-FirstCard.html">First Card and lowest number</a><br>
              </div>
                 <div class="six columns">
-                &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/SSNYears.html">SSN Significant events by year</a><br>
-                &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/SSNPresidents.html">SSN Presidents thoughts</a><br>
-                &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/SSN-High-Group.html">SSN High Group</a><br>
-                &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/SSN-Card.html">SSN Card through history</a><br>
-                &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/SSN-3types.html">SSN 3 types of valid cards</a><br>
-                &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/SSN-island-duplication.html">SSN island duplication</a><br>
+                &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/SSNYears.html">Significant events by year</a><br>
+                &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/SSNPresidents.html">Presidents thoughts</a><br>
+                &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/SSN-High-Group.html">High Group</a><br>
+                &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/SSN-Card.html">Card through history</a><br>
+                &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/SSN-3types.html">3 types of valid cards</a><br>
+                &nbsp; &nbsp; &nbsp; &nbsp;☯ <a href="ssn/articles/SSN-island-duplication.html">Island duplication</a><br>
               </div>
             </div>
 
-            <b>Use in Film........... </b><br>
+            <b>SSN in Film........... </b><br>
             <div class="row">
               <div class="six columns" >
                 &nbsp; &nbsp; &nbsp; &nbsp;🎬 <a href="ssn/articles/905-80-5406.html">James Edwards 905-80-5406</a><br>
