--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
                 &nbsp; &nbsp; &nbsp; &nbsp;🕴 <a href="ssn/articles/ssnnames.html">Names from Death Database with Perl</a><br>
    
               </div>
+              <div class="six columns" >
                 &nbsp; &nbsp; &nbsp; &nbsp;
 
               </div>
