--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 &nbsp; &nbsp; &nbsp; &nbsp;🎬 <a href="ssn/articles/000-00-0002.html">Montgomery Burns 000-00-0002</a><br>
                 &nbsp; &nbsp; &nbsp; &nbsp;🎬 <a href="ssn/articles/0256X.30B87.html">Beldar 0256X.30B87</a><br>
                 &nbsp; &nbsp; &nbsp; &nbsp;🎬 <a href="ssn/articles/141-18-6941.html">Jessy Pinkman 141-18-6941</a><br>
-                &nbsp; &nbsp; &nbsp; &nbsp;🎬 <a href="ssn/articles/141-18-6941.html">Ruth Marx 915-30-1717.html</a><br>
+                &nbsp; &nbsp; &nbsp; &nbsp;🎬 <a href="ssn/articles/915-30-1717.html">Ruth Marx 915-30-1717</a><br>
                 
 
               </div>
