--- a/js/PDF.html
+++ b/js/PDF.html
@@ -31,7 +31,7 @@
 <script>
     // If absolute URL from the remote server is provided, configure the CORS
     // header on that server.
-    var url = 'https://pdfaiw.uspto.gov/78/2017/86/012/1.pdf';
+    var url = 'https://cors-escape.herokuapp.com/https://pdfaiw.uspto.gov/00/2017/90/000/2.pdf';
     
     // Loaded via <script> tag, create shortcut to access PDF.js exports.
     var pdfjsLib = window['pdfjs-dist/build/pdf'];
