--- a/js/PDF.html
+++ b/js/PDF.html
@@ -27,6 +27,8 @@
 </div>
 
 <canvas id="the-canvas"></canvas>
+<canvas id="the-canvas2"></canvas>
+
 
 <script>
     // If absolute URL from the remote server is provided, configure the CORS
@@ -37,7 +39,7 @@
     var pdfjsLib = window['pdfjs-dist/build/pdf'];
     
     // The workerSrc property shall be specified.
-    pdfjsLib.GlobalWorkerOptions.workerSrc = '//mozilla.github.io/pdf.js/build/pdf.worker.js';
+    pdfjsLib.GlobalWorkerOptions.workerSrc = 'pdf.worker.js';
     
     var pdfDoc = null,
         pageNum = 1,
