--- a/js/PDF.html
+++ b/js/PDF.html
@@ -140,7 +140,7 @@
     var pdfjsLib = window['pdfjs-dist/build/pdf'];
     
     // The workerSrc property shall be specified.
-    pdfjsLib.GlobalWorkerOptions.workerSrc = 'pdf.worker.js';
+    pdfjsLib.GlobalWorkerOptions.workerSrc = '//mozilla.github.io/pdf.js/build/pdf.worker.js';
     
     var pdfDoc = null,
         pageNum = 1,
