--- a/js/PDF.html
+++ b/js/PDF.html
@@ -29,14 +29,15 @@
 <h1>Patent HOT or NOT</h1>
 
 <div>
-  <button id="hot" onclick="buttonhot()">hot</button>&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;
-  <button id="not" onclick="buttonnot()">not</button>
-  &nbsp; &nbsp;<a id="directlink" href="PDF.html?0420164602602!!">Direct Link</a>
+  <button id="hot" onclick="buttonhot()" style="background-color:lightblue">[HOT]</button>&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;
+  <button id="not" onclick="buttonnot()" style="background-color:red">[NOT]</button>
+  &nbsp; &nbsp;
 
 </div>
 
 <canvas id="the-canvas" >canvas data here</canvas><br>
-<canvas id="the-canvas2" width=500px height=300px></canvas>
+<canvas id="the-canvas2" width=500px height=300px></canvas><br>
+<a id="directlink" href="PDF.html?2020125700502!!">Direct Link</a>
 
 
 </align>
