--- a/js/PDF.html
+++ b/js/PDF.html
@@ -29,7 +29,7 @@
 <h1>Patent HOT or NOT</h1>
 
 <div>
-  <button id="hot" onclick="buttonhot()" style="background-color:lightblue">[HOT]</button>&nbsp; &nbsp;&nbsp; 
+  <button id="hot" onclick="buttonhot()" style="background-color:lightblue">[HOT]</button>&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <button id="not" onclick="buttonnot()" style="background-color:red">[NOT]</button><br>
 
 </div>
