--- a/js/PDF.html
+++ b/js/PDF.html
@@ -157,7 +157,7 @@
     ctx.fillText("  NOT: " +(nots - 123), 10, 140);
     ctx.fillStyle = "green";
     ctx.fillText("  TOT: " + (hots +nots-123-234), 10, 170);
-
+    ctx.fillText("" ,0,0);
     }
 
 
@@ -174,7 +174,7 @@
         pageNum = 1,
         pageRendering = true,
         pageNumPending = null,
-        scale = 1,
+        scale = 3.4,
         canvas = document.getElementById('the-canvas'),
         ctx = canvas.getContext('2d');
     
